Fixed whitespace

--- a/lightr.css
+++ b/lightr.css
@@ -1,6 +1,6 @@
 code.highlight {
   display: block;
-  padding: 0;
+  padding: 20px 25px;
   background: white;
   border: 1px solid #CECECE;
   font-family: "Bitstream Vera Sans Mono";
